[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/UI/SimplePixelArtUIpack/fonts/font 1/pixelfont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/SimplePixelArtUIpack/Artwork/ColorCustomizible/rounded/Background_CC_rounded_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/SimplePixelArtUIpack/Artwork/ColorCustomizible/rounded/Background_CC_rounded.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/SimplePixelArtUIpack/Artwork/ColorCustomizible/rounded/Background_CC_rounded_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/player.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/SimplePixelArtUIpack/fonts/font 2/pixelfont2.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Levels/Menu.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/Here.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Button.png" type="Texture" id=9]
[ext_resource path="res://Assets/Audio/background/menu.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/UI/Maze.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=13]
flags = 2
atlas = ExtResource( 11 )
region = Rect2( -38.7375, -29.2652, 1062.66, 588.308 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 2.65215, 3.31618, 54.6196, 55.595 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 602.394, 970.374, 185.39, 185.39 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 806.908, 970.374, 182.841, 185.39 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 192.69, 970.374, 184.549, 185.39 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.054902, 0.054902, 0.054902, 0.729412 )
border_width_top = 21
border_color = Color( 0.611765, 0.458824, 0, 1 )
expand_margin_top = 20.0

[sub_resource type="Theme" id=14]
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.109804, 0.109804, 0.109804, 0 ), Color( 0.109804, 0.109804, 0.109804, 1 ) ]
}

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.109804, 0.109804, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.580392, 0.4, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 15.0
margin_right = -17.0
margin_bottom = -15.0
color = Color( 0.352941, 0.14902, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="ColorRect/ColorRect"]
modulate = Color( 0.690196, 0.690196, 0.690196, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -9.0
margin_bottom = -9.0
texture = SubResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -221.0
margin_right = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="ColorRect/VBoxContainer"]
margin_right = 216.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0509804, 0.305882, 0.909804, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="TextureButton" parent="ColorRect/VBoxContainer"]
show_behind_parent = true
margin_top = 64.0
margin_right = 216.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 60 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/Instructions"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.898039, 0.117647, 1 )
text = "Instructions"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/VBoxContainer/Instructions"]
visible = false
show_behind_parent = true
margin_left = -134.0
margin_top = -28.0
margin_right = 348.0
margin_bottom = 90.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="ColorRect/VBoxContainer"]
margin_top = 128.0
margin_right = 216.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.901961, 0.27451, 0.27451, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.0
margin_top = -116.0
margin_right = 157.0
margin_bottom = -55.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.215686, 0.243137, 0.25098, 1 )
text = "Suicide Explorer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" type="TextureRect" parent="ColorRect/Label"]
margin_left = 527.017
margin_top = -10.6054
margin_right = 737.017
margin_bottom = 176.395
texture = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect/Label"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.927
margin_top = -79.2222
margin_right = 498.073
margin_bottom = 149.778
color = Color( 0.270588, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect/Label/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.498
margin_top = -102.003
margin_right = 373.502
margin_bottom = 107.997
color = Color( 0.741176, 0.698039, 0.988235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -78.3459
margin_top = 41.3227
margin_right = -37.3459
margin_bottom = 78.3227
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.433
margin_top = -18.5
margin_right = -24.4333
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.866667, 0, 1 )
text = "Youtube"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.5
margin_top = -201.0
margin_right = 177.5
margin_bottom = 201.0
theme = SubResource( 14 )
window_title = "Instructions"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer"]
margin_right = 339.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.937255, 0.780392, 0.054902, 1 )
text = "Suicide Explorer"
align = 1
valign = 1

[node name="label5" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer"]
margin_top = 40.0
margin_right = 339.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
text = "Made by : Variable"
align = 1
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/AcceptDialog/VBoxContainer"]
margin_top = 60.0
margin_right = 339.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer"]
margin_right = 339.0
margin_bottom = 910.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Heading2" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 327.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.0666667, 0.901961, 0.0784314, 1 )
text = "Instructions:"

[node name="label3" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 327.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
text = "Hy there!.. lets play a simple game you will be inside a maze and you have to reach the end and in the mean time i will try to kill you!!! so kindly stay away from the walls when you die.
(I dont want them to get dirty)
"
align = 1
autowrap = true

[node name="Controls" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 327.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.0666667, 0.901961, 0.0784314, 1 )
text = "Controls:"

[node name="label2" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 327.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
text = "W, S, A, D to move

\"ESC\" to skip intro

press \"Space Bar\" to commit suicide
(Though i would prefer you not using it cause it would spoil my fun)"
align = 1
autowrap = true

[node name="Rules" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 327.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.0666667, 0.901961, 0.0784314, 1 )
text = "Game Rules:"

[node name="label4" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 327.0
margin_bottom = 501.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
text = "your position will be saved every \"5\" seconds
when you die, you will return to your previous save and that save will be deleted

You can't kill my minions, i designed them especially for you.
"
align = 1
autowrap = true

[node name="Credits" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 505.0
margin_right = 327.0
margin_bottom = 529.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.0666667, 0.901961, 0.0784314, 1 )
text = "Asset Info:"

[node name="label" type="Label" parent="ColorRect/AcceptDialog/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 533.0
margin_right = 327.0
margin_bottom = 910.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
text = "
audio assets : 
(background music)
bart
https://opengameart.org/users/bart
wipics
https://opengameart.org/users/wipics

(robot sounds)
DaGameKnower
https://opengameart.org/users/dagameknower

Interface assets:
pzUH
https://pzuh.itch.io/free-game-gui

Kobliznik
https://kobliznik.itch.io/pixel-ui-pack
"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/play = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="BackgroundAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
autoplay = true

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="ColorRect/VBoxContainer/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="ColorRect/VBoxContainer/Instructions" to="." method="_on_Instructions_mouse_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="mouse_entered" from="ColorRect/VBoxContainer/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ColorRect/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
